--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
           SSH_HOST: ${{ secrets.HOSTINGER_HOST }}
           SSH_USER: ${{ secrets.HOSTINGER_USER }}
           SSH_PORT: ${{ secrets.HOSTINGER_PORT }}
-          TARGET: ${{ secrets.HOSTINGER_PATH }}
+          TARGET: ${{ secrets.HOSTINGER_PATH_TEST }}
         run: |
           RSYNC_SRC="${{ steps.out.outputs.dir }}/"
           PORT="${SSH_PORT:-65002}"
