--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,18 @@
-name: Deploy
+name: Deploy React to Hostinger (update all sites)
 
 on:
   push:
-    branches: [ main ]        # change if your default branch is different
+    branches: [ main ]
   workflow_dispatch:
+    inputs:
+      subs:
+        description: "Space-separated subfolders under public_html (e.g., 'clt rdu gso')"
+        required: false
+        default: "clt test"
+
+env:
+  NODE_VERSION: "20"
+  SUBS_DEFAULT: "clt test"   # edit to add more by default
 
 jobs:
   build-and-deploy:
@@ -13,10 +22,10 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node
+      - name: Use Node ${{ env.NODE_VERSION }}
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Install deps
         run: npm ci
@@ -24,40 +33,51 @@ jobs:
       - name: Build
         run: npm run build
 
-      - name: Detect output dir
+      - name: Detect output dir (CRA vs Vite)
         id: out
         run: |
-          if [ -d "dist" ]; then echo "dir=dist" >> "$GITHUB_OUTPUT"; else echo "dir=build" >> "$GITHUB_OUTPUT"; fi
+          if [ -d "dist" ]; then
+            echo "dir=dist" >> "$GITHUB_OUTPUT"
+          else
+            echo "dir=build" >> "$GITHUB_OUTPUT"
+          fi
 
       - name: Setup SSH
         env:
           SSH_KEY: ${{ secrets.HOSTINGER_SSH_KEY }}
           SSH_HOST: ${{ secrets.HOSTINGER_HOST }}
+          SSH_PORT: ${{ secrets.HOSTINGER_PORT }}
         run: |
+          set -euo pipefail
           mkdir -p ~/.ssh
           echo "$SSH_KEY" > ~/.ssh/id_ed25519
           chmod 600 ~/.ssh/id_ed25519
-          # (Optional) lock to known host to avoid prompts
-          ssh-keyscan -p "${{ secrets.HOSTINGER_PORT || '65002' }}" "$SSH_HOST" >> ~/.ssh/known_hosts
+          PORT="${SSH_PORT:-65002}"
+          ssh-keyscan -p "$PORT" "$SSH_HOST" >> ~/.ssh/known_hosts
 
-      - name: Test Deploy with rsync over SSH
+      - name: Deploy to public_html + subfolders (no delete)
         env:
           SSH_HOST: ${{ secrets.HOSTINGER_HOST }}
           SSH_USER: ${{ secrets.HOSTINGER_USER }}
           SSH_PORT: ${{ secrets.HOSTINGER_PORT }}
-          TARGET: ${{ secrets.HOSTINGER_PATH_TEST }}
+          ROOT_PATH: ${{ secrets.HOSTINGER_PATH }}   # /home/u123/public_html
+          RSYNC_SRC: ${{ steps.out.outputs.dir }}/
+          SUBS_INPUT: ${{ inputs.subs }}
         run: |
-          RSYNC_SRC="${{ steps.out.outputs.dir }}/"
+          set -euo pipefail
           PORT="${SSH_PORT:-65002}"
-          rsync -az -e "ssh -p $PORT" "$RSYNC_SRC" "$SSH_USER@$SSH_HOST:$TARGET"
-      
-      - name: CLT Deploy with rsync over SSH
-        env:
-          SSH_HOST: ${{ secrets.HOSTINGER_HOST }}
-          SSH_USER: ${{ secrets.HOSTINGER_USER }}
-          SSH_PORT: ${{ secrets.HOSTINGER_PORT }}
-          TARGET: ${{ secrets.HOSTINGER_PATH_CLT }}
-        run: |
-          RSYNC_SRC="${{ steps.out.outputs.dir }}/"
-          PORT="${SSH_PORT:-65002}"
-          rsync -az -e "ssh -p $PORT" "$RSYNC_SRC" "$SSH_USER@$SSH_HOST:$TARGET"
+          SUBS="${SUBS_INPUT:-}"
+          [ -z "$SUBS" ] && SUBS="${SUBS_DEFAULT}"
+
+          echo "Ensuring remote dirs exist…"
+          ssh -p "$PORT" "$SSH_USER@$SSH_HOST" "mkdir -p '$ROOT_PATH' $(for s in $SUBS; do printf '%q ' "$ROOT_PATH/$s"; done)"
+
+          echo "Deploying to $ROOT_PATH …"
+          rsync -az -e "ssh -p $PORT" "$RSYNC_SRC" "$SSH_USER@$SSH_HOST:$ROOT_PATH/"
+
+          for s in $SUBS; do
+            echo "Deploying to $ROOT_PATH/$s …"
+            rsync -az -e "ssh -p $PORT" "$RSYNC_SRC" "$SSH_USER@$SSH_HOST:$ROOT_PATH/$s/"
+          done
+
+          echo "✅ Deploy finished (no deletions)."
