--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,23 +1,19 @@
-name: Deploy React to Hostinger (select target)
+name: Deploy React to Hostinger (flexible target)
 
 on:
   push:
     branches: [ main ]
   workflow_dispatch:
     inputs:
-      target:
-        description: "Select where to deploy"
-        required: true
-        type: choice
-        options:
-          - Test Env
-          - Sync all
-        default: test
+      subs:
+        description: "Enter subdomains (e.g. 'all', 'test', or 'rdu gso chs')"
+        required: false
+        default: "test"
 
 env:
   NODE_VERSION: "20"
-  SUBS_ALL: "clt rdu gso"   # all subdomains you want to deploy
-  SUBS_TEST: "test"         # only test deployment by default
+  SUBS_ALL: "clt rdu gso chs"   # full list of all subdomains
+  SUBS_TEST: "test"             # default test deployment only
 
 jobs:
   build-and-deploy:
@@ -32,7 +28,7 @@ jobs:
         with:
           node-version: ${{ env.NODE_VERSION }}
 
-      - name: Install deps
+      - name: Install dependencies
         run: npm ci
 
       - name: Build
@@ -60,27 +56,32 @@ jobs:
           PORT="${SSH_PORT:-65002}"
           ssh-keyscan -p "$PORT" "$SSH_HOST" >> ~/.ssh/known_hosts
 
-      - name: Deploy to selected target
+      - name: Deploy to selected subdomains (no delete)
         env:
           SSH_HOST: ${{ secrets.HOSTINGER_HOST }}
           SSH_USER: ${{ secrets.HOSTINGER_USER }}
           SSH_PORT: ${{ secrets.HOSTINGER_PORT }}
           ROOT_PATH: ${{ secrets.HOSTINGER_PATH }}   # e.g. /home/u123/public_html
           RSYNC_SRC: ${{ steps.out.outputs.dir }}/
-          TARGET: ${{ inputs.target }}
+          SUBS_INPUT: ${{ inputs.subs }}
         run: |
           set -euo pipefail
-
           PORT="${SSH_PORT:-65002}"
 
-          if [ "$TARGET" = "Sync all" ]; then
+          # Decide which subfolders to deploy
+          if [ "${SUBS_INPUT,,}" = "all" ]; then
             SUBS="${SUBS_ALL}"
-
+            
             echo "Deploying to main site ($ROOT_PATH)…"
             rsync -az -e "ssh -p $PORT" "$RSYNC_SRC" "$SSH_USER@$SSH_HOST:$ROOT_PATH/"
-          else
+          
+          elif [ "${SUBS_INPUT,,}" = "test" ] || [ -z "$SUBS_INPUT" ]; then
             SUBS="${SUBS_TEST}"
+          else
+            SUBS="${SUBS_INPUT}"
           fi
+
+          echo "Deploying to: $SUBS"
 
           echo "Ensuring remote directories exist…"
           ssh -p "$PORT" "$SSH_USER@$SSH_HOST" "mkdir -p '$ROOT_PATH' $(for s in $SUBS; do printf '%q ' "$ROOT_PATH/$s"; done)"
